[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["denis-sukhoverkhov <denis.sukhoverkhov@yandex.ru>"]

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "~0.54.2"
uvicorn = "~0.11.5"
sqlalchemy = "~1.3.17"
pydantic = {extras = ["email", "dotenv"], version = "^1.5.1"}
passlib = "~1.7.2"
python-jose = "~3.1.0"
psycopg2_binary = "~2.8.5"
alembic = "~1.4.2"
more-itertools = "~8.3.0"

[tool.poetry.dev-dependencies]
pytest = "~5.4.2"
requests = "~2.23.0"
pytest-cov = "~2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
